# libtomfloat

./: .gitmodules  meson.build  tomfloat.h
demos/: meson.build
libtommath-1.2.0/: tommath.c
tools/: amalgamate.c
